# ADSD

./: README.md
.github/workflows/: publish.yml
cordic/: README.md  cordic.ipynb  requirements.txt
docs/: README.md  book.toml
docs/src/: SUMMARY.md  intro.md  report.md
docs/src/vivado_setup/: intro.md  windows.md
impls/memory/: README.md
impls/memory/code/: README.md  common.h  test_utils.h
impls/memory/code/axilite/: hls.cpp  hls.h  main.cpp  testbench.cpp
impls/memory/code/aximaster/: hls.cpp  hls.h  testbench.cpp
impls/memory/code/aximaster4/: hls.cpp  main.cpp  testbench.cpp
impls/memory/code/aximaster4burst/: hls.cpp  hls.h  main.cpp
impls/memory/code/aximasterburst/: hls.cpp  hls.h  main.cpp  testbench.cpp
impls/memory/code/stream4pixels/: README.md  hls.cpp  hls.h  testbench.cpp
impls/memory/code/streamchunks/: hls.cpp  hls.h  main.cpp  testbench.cpp
impls/software/: README.md
impls/software/code/: README.md  ground_truth.h  main.cpp
models/: README.md
models/0_1/: model
models/0_1/weights/: alphas.csv  bias.csv  ground_truth.csv  svs.csv
models/0_1_cw_provided/: alphas.csv  bias.csv  ground_truth.csv  svs.csv
report/: .gitignore  README.md  refs.bib  report.tex
report/data/: math.csv
tools/: README.md  exp  pyproject.toml  qua  svm  tab
tools/src/exp/: cli.py  header.py  main.py  params.py
tools/src/lib/: qcli.py  qtypes.py  quant.py  write.py
tools/src/qua/: cli.py  header.py  main.py
tools/src/svm/: cli.py  consts.py  extract.py  main.py  model.py
tools/src/tab/: cli.py  header.py  main.py  tables.py
(+37 files in other folders)
