[build-system]
requires = ["setuptools", "wheel"]

[project]
authors = [
    { name = "Oliver Killane", email = "ok220@ic.ac.uk" },
]
name = "svm"
version = "0.0.1"
description = "A basic cli for generating weights for the ADSD SVM optimisation project"
requires-python = "==3.10.12"
dependencies = [
    "scikit-learn==1.4.0",
    "pandas==2.2.0",
    "fxpmath==0.4.9"
]

[project.optional-dependencies]
dev = [
    "darker[isort]==1.7.2",
    "mypy==1.7.1",
    "pytest==7.4.3",
    "pandas-stubs==2.1.4.231227"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
packages = ['src', 'tests']

[tool.darker]
src = ["src"]
revision = "master"
isort = true
line-length = 80
